# example-mlflow-eval

./: .env.template  .gitignore  Dockerfile  README.md  Taskfile.yml  app.yml  docker-compose.yml  pyproject.toml
db/: db.env  db.env.template
evaluation/: ask.py  eval.py  llm.py  settings.py
mlflow/: basic_auth.ini  mlflow.env
s3/: s3.env
testdata/: eval_dataset.json
